devops/ibm/ibm-partition-deploy/templates/istio-osdu-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: osdu-gateway
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: istio-ingress-cert
      mode: SIMPLE
